# agent-experiments

./: README.md  pyproject.toml
agent_experiments/prototypes/: 001_chatollama_with_tool_calling.ipynb  002_langgraph_basicbot.ipynb
